# theJitter

./: CMakeLists.txt  Makefile  main.cpp
Generator/: AST.hpp  Builtins.cpp  Builtins.hpp  Generator.cpp  Generator.hpp  Program.cpp  Program.hpp  RValue.cpp  RValue.hpp  Runtime.cpp  Runtime.hpp  Scope.cpp  Scope.hpp  SpecialNames.hpp  Table.cpp  Table.hpp  Value.cpp  Value.hpp  ValueType.hpp  ValueVariant.cpp  ValueVariant.hpp  Variable.cpp  Variable.hpp
Lua/: grammar.y  scanner.l
Util/: Casts.hpp  EnumHelpers.hpp  Fold.hpp  PrettyPrint.cpp  PrettyPrint.hpp
gcc-jit-examples/: README  factorial_jit.cpp  sum_jit.cpp
tests/: function_call_01.lua  function_call_02.lua  function_call_03.lua  function_call_04.lua  simple_arithmetic_01.lua  simple_arithmetic_02.lua  simple_arithmetic_03.lua  table_01.lua  table_02.lua  table_03.lua  table_04.lua  table_05.lua  table_06.lua  table_07.lua  table_08.lua
